--- a/djangocon/templates/core/placeholder.html
+++ b/djangocon/templates/core/placeholder.html
@@ -4,7 +4,7 @@
 
 {% block body %}
 <header>
-<h1><a href="{% url placeholder %}">Djangocon Europe</a></h1>
+<h1><a href="{% url placeholder %}">DjangoCon Europe</a></h1>
 <h2>June&emsp;2011 <em>—in—</em> Amsterdam</h2>
 <h3><em>Conference</em> 6<sup>th</sup>&thinsp;–&thinsp;8<sup>th</sup>&emsp;&emsp;&emsp;<em>Sprints</em> 9<sup>th</sup>&thinsp;–&thinsp;10<sup>th</sup></h3>
 </header>
