--- a/djangocon/templates/base.html
+++ b/djangocon/templates/base.html
@@ -8,7 +8,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{% block title %}Djangocon EU{% block subtitle %}{% endblock subtitle %}{% endblock title %}</title>
+        <title>{% block title %}DjangoCon Europe{% block subtitle %}{% endblock subtitle %}{% endblock title %}</title>
         <meta name="description" content="{% block description %}{% endblock description %}">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="{{ STATIC_URL }}favicon.ico">
