Tightened up date layout to one line.

--- a/djangocon/templates/core/placeholder.html
+++ b/djangocon/templates/core/placeholder.html
@@ -13,8 +13,7 @@
 <header>
 <h1><a href="{% url placeholder %}">Djangocon Europe</a></h1>
 <h2 class="webfont">June 2011 <em>—in—</em> Amsterdam</h2>
-<h3 class="webfont"><em>Conference</em> 6<sup>th</sup>&thinsp;–&thinsp;8<sup>th</sup></h3>
-<h3 class="webfont"><em>Sprints</em> 9<sup>th</sup>&thinsp;–&thinsp;10<sup>th</sup></h3>
+<h3 class="webfont"><em>Conference</em> 6<sup>th</sup>&thinsp;–&thinsp;8<sup>th</sup>&ensp;&bull;&ensp;<em>Sprints</em> 9<sup>th</sup>&thinsp;–&thinsp;10<sup>th</sup></h3>
 </header>
 
 <section id="capture" class="webfont">
