Added a small Facebook image such that using the link will result in an image.

--- a/djangocon/static/css/screen.css
+++ b/djangocon/static/css/screen.css
@@ -344,3 +344,6 @@ body#placeholder #capture input#submit:hover {
   -o-transition-timing-function: ease;
   transition-timing-function: ease;
 }
+img.facebook-image {
+  display: none;
+}
