--- a/djangocon/templates/base.html
+++ b/djangocon/templates/base.html
@@ -48,5 +48,7 @@
         s.parentNode.insertBefore(g, s);
         })(document, 'script');
     </script>
+    <!-- Image for Facebook to find -->
+    <img src="{{ STATIC_URL}}img/facebook.png" alt="DjangoCon Europe" class="facebook-image" />
 </body>
 </html>
