--- a/djangocon/static/css/screen.css
+++ b/djangocon/static/css/screen.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-/* line 14, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.beta.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 14, ../../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.beta.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -19,47 +19,47 @@ table, caption, tbody, tfoot, thead, tr, th, td {
   vertical-align: baseline;
 }
 
-/* line 17, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.beta.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 17, ../../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.beta.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 body {
   line-height: 1;
   color: black;
   background: white;
 }
 
-/* line 19, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.beta.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 19, ../../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.beta.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 21, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.beta.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 21, ../../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.beta.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: separate;
   border-spacing: 0;
   vertical-align: middle;
 }
 
-/* line 23, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.beta.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 23, ../../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.beta.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 25, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.beta.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 25, ../../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.beta.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: "" "";
 }
-/* line 96, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.beta.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 96, ../../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.beta.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
 }
 
-/* line 27, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.beta.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 27, ../../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.beta.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 34, ../sass/screen.scss */
+/* line 4, ../sass/screen.scss */
 html {
   height: 100%;
   width: 100%;
@@ -67,34 +67,34 @@ html {
   background: url(../img/bg.png) repeat-x left top, url(../img/bg_tiling.png) repeat left top #b32017;
 }
 
-/* line 41, ../sass/screen.scss */
+/* line 11, ../sass/screen.scss */
 body {
   background: transparent;
 }
 
-/* line 45, ../sass/screen.scss */
+/* line 15, ../sass/screen.scss */
 .wf-loading .webfont {
   visibility: hidden;
 }
 
-/* line 49, ../sass/screen.scss */
+/* line 19, ../sass/screen.scss */
 .wf-inactive .webfont {
   visibility: visible;
 }
 
-/* line 53, ../sass/screen.scss */
+/* line 23, ../sass/screen.scss */
 body#placeholder {
   font-family: "ronnia-condensed-1","ronnia-condensed-2";
   font-weight: 700;
 }
-/* line 56, ../sass/screen.scss */
+/* line 26, ../sass/screen.scss */
 body#placeholder header {
   color: #f5e6d2;
   text-align: center;
   width: 960px;
   margin: 0 auto;
 }
-/* line 62, ../sass/screen.scss */
+/* line 32, ../sass/screen.scss */
 body#placeholder header h1 {
   text-indent: -9999px;
   width: 490px;
@@ -102,7 +102,7 @@ body#placeholder header h1 {
   margin: 30px auto;
   background: url(../img/masthead.png) no-repeat center center;
 }
-/* line 70, ../sass/screen.scss */
+/* line 40, ../sass/screen.scss */
 body#placeholder header h2 {
   text-shadow: #7e0008 0 3px 0;
   text-transform: uppercase;
@@ -111,7 +111,7 @@ body#placeholder header h2 {
   margin-bottom: 15px;
   font-weight: 700;
 }
-/* line 78, ../sass/screen.scss */
+/* line 48, ../sass/screen.scss */
 body#placeholder header h2 em {
   text-transform: lowercase;
   font-style: italic;
@@ -120,14 +120,14 @@ body#placeholder header h2 em {
   font-family: "ff-meta-serif-web-pro-1","ff-meta-serif-web-pro-2", georgia, serif;
   font-weight: 500;
 }
-/* line 87, ../sass/screen.scss */
+/* line 57, ../sass/screen.scss */
 body#placeholder header h3 {
   text-shadow: #7e0008 0 2px 0;
   font-size: 1.5em;
   text-transform: lowercase;
   letter-spacing: 1px;
 }
-/* line 93, ../sass/screen.scss */
+/* line 63, ../sass/screen.scss */
 body#placeholder header h3 em {
   text-transform: lowercase;
   font-style: italic;
@@ -136,7 +136,7 @@ body#placeholder header h3 em {
   font-family: "ff-meta-serif-web-pro-1","ff-meta-serif-web-pro-2", georgia, serif;
   font-weight: 500;
 }
-/* line 101, ../sass/screen.scss */
+/* line 71, ../sass/screen.scss */
 body#placeholder header h3 sup {
   vertical-align: super;
   font-size: 0.6em;
@@ -144,7 +144,7 @@ body#placeholder header h3 sup {
   text-decoration: underline;
   text-transform: lowercase;
 }
-/* line 111, ../sass/screen.scss */
+/* line 81, ../sass/screen.scss */
 body#placeholder #capture {
   font-family: "ronnia-condensed-1","ronnia-condensed-2";
   font-weight: 300;
@@ -162,11 +162,11 @@ body#placeholder #capture {
   -khtml-border-radius: 8px;
   border-radius: 8px;
 }
-/* line 122, ../sass/screen.scss */
+/* line 92, ../sass/screen.scss */
 body#placeholder #capture label {
   display: none;
 }
-/* line 126, ../sass/screen.scss */
+/* line 96, ../sass/screen.scss */
 body#placeholder #capture #subscribe {
   overflow: hidden;
   *zoom: 1;
@@ -181,7 +181,7 @@ body#placeholder #capture #subscribe {
   height: 60px;
   position: relative;
 }
-/* line 135, ../sass/screen.scss */
+/* line 105, ../sass/screen.scss */
 body#placeholder #capture #feedback {
   font-family: "ff-meta-serif-web-pro-1","ff-meta-serif-web-pro-2", georgia, serif;
   font-weight: 500;
@@ -207,23 +207,23 @@ body#placeholder #capture #feedback {
   box-shadow: inset 0 0 5px 0px #888888;
   display: none;
 }
-/* line 152, ../sass/screen.scss */
+/* line 122, ../sass/screen.scss */
 body#placeholder #capture #feedback.processing {
   background: url(../img/loading.gif) no-repeat center center #7e0008;
 }
-/* line 156, ../sass/screen.scss */
+/* line 126, ../sass/screen.scss */
 body#placeholder #capture #feedback em {
   font-style: italic;
 }
-/* line 160, ../sass/screen.scss */
+/* line 130, ../sass/screen.scss */
 body#placeholder #capture #feedback.ok {
   background: url(../img/ok.png) no-repeat 10px 20px white;
 }
-/* line 164, ../sass/screen.scss */
+/* line 134, ../sass/screen.scss */
 body#placeholder #capture #feedback.error {
   background: url(../img/error.png) no-repeat 10px 20px #ebe187;
 }
-/* line 168, ../sass/screen.scss */
+/* line 138, ../sass/screen.scss */
 body#placeholder #capture #id_email {
   background-position: right center;
   font-family: "ff-meta-serif-web-pro-1","ff-meta-serif-web-pro-2", georgia, serif;
@@ -268,19 +268,19 @@ body#placeholder #capture #id_email {
   -o-box-shadow: inset 0 0 5px 0px #261a09;
   box-shadow: inset 0 0 5px 0px #261a09;
 }
-/* line 187, ../sass/screen.scss */
+/* line 157, ../sass/screen.scss */
 body#placeholder #capture #id_email.labelled {
   font-family: "ff-meta-serif-web-pro-1","ff-meta-serif-web-pro-2", georgia, serif;
   font-weight: 500;
   color: #999;
 }
-/* line 192, ../sass/screen.scss */
+/* line 162, ../sass/screen.scss */
 body#placeholder #capture #id_email:focus {
   outline: none;
   color: black;
   background-color: white;
 }
-/* line 201, ../sass/screen.scss */
+/* line 171, ../sass/screen.scss */
 body#placeholder #capture input#submit {
   text-shadow: 0 0 10px #7e0008;
   display: block;
@@ -328,7 +328,7 @@ body#placeholder #capture input#submit {
   -o-transition-timing-function: ease;
   transition-timing-function: ease;
 }
-/* line 224, ../sass/screen.scss */
+/* line 194, ../sass/screen.scss */
 body#placeholder #capture input#submit:hover {
   text-shadow: 0 0 15px white;
   -moz-transition-property: all;
@@ -344,6 +344,7 @@ body#placeholder #capture input#submit:hover {
   -o-transition-timing-function: ease;
   transition-timing-function: ease;
 }
-img.facebook-image {
+/* line 201, ../sass/screen.scss */
+body#placeholder img.facebook-image {
   display: none;
 }
