--- a/djangocon/templates/base.html
+++ b/djangocon/templates/base.html
@@ -10,11 +10,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{% block title %}DjangoCon Europe{% block subtitle %}{% endblock subtitle %}{% endblock title %}</title>
         <meta name="description" content="{% block description %}{% endblock description %}">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
         <link rel="shortcut icon" href="{{ STATIC_URL }}favicon.ico">
         <link rel="apple-touch-icon" href="{{ STATIC_URL }}apple-touch-icon.png">
         {% block css %}
         <link rel="stylesheet" href="{{ STATIC_URL }}css/screen.css" media="screen, projection" >
+        <link rel="stylesheet" href="{{ STATIC_URL }}css/mobile.css" media="screen and (max-device-width: 480px)"/>
+        
         <!--<link rel="stylesheet" href="{{ STATIC_URL }}css/print.css" media="print">-->
         <!--[if IE]>
         <link rel="stylesheet" href="{{ STATIC_URL }}css/ie.css" media="screen, projection">
