--- a/djangocon/templates/base.html
+++ b/djangocon/templates/base.html
@@ -14,9 +14,9 @@
         <link rel="shortcut icon" href="{{ STATIC_URL }}favicon.ico">
         <link rel="apple-touch-icon" href="{{ STATIC_URL }}apple-touch-icon.png">
         {% block css %}
-        <link rel="stylesheet" href="{{ STATIC_URL }}css/screen.css" media="screen, projection" >
-        <link rel="stylesheet" href="{{ STATIC_URL }}css/mobile.css" media="screen and (max-device-width: 480px)"/>
-        
+        <link rel="stylesheet" href="{{ STATIC_URL }}css/screen.css" media="screen, projection">
+        <link rel="stylesheet" href="{{ STATIC_URL }}css/mobile.css" media="screen and (max-device-width: 480px)">
+        <link rel="stylesheet" href="{{ STATIC_URL }}css/retina.css" media="only screen and (-webkit-min-device-pixel-ratio: 2)">
         <!--<link rel="stylesheet" href="{{ STATIC_URL }}css/print.css" media="print">-->
         <!--[if IE]>
         <link rel="stylesheet" href="{{ STATIC_URL }}css/ie.css" media="screen, projection">
