--- a/djangocon/static/css/mobile.css
+++ b/djangocon/static/css/mobile.css
@@ -1,60 +1,59 @@
-@charset "UTF-8";
-/* line 14, ../../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.beta.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, font, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-  font-weight: inherit;
-  font-style: inherit;
-  font-size: 100%;
-  font-family: inherit;
-  vertical-align: baseline;
+/* line 3, ../sass/mobile.scss */
+html {
+  width: 320px;
 }
 
-/* line 17, ../../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.beta.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-body {
-  line-height: 1;
-  color: black;
-  background: white;
+/* line 7, ../sass/mobile.scss */
+body#placeholder {
+  width: 320px;
+  margin: 0 auto;
+  background: transparent;
 }
-
-/* line 19, ../../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.beta.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-ol, ul {
-  list-style: none;
+/* line 12, ../sass/mobile.scss */
+body#placeholder header {
+  width: 320px;
 }
-
-/* line 21, ../../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.beta.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-table {
-  border-collapse: separate;
-  border-spacing: 0;
-  vertical-align: middle;
+/* line 15, ../sass/mobile.scss */
+body#placeholder header h1 {
+  margin: 0 0 20px 0;
+  width: 320px;
+  height: 360px;
+  background-image: url(../img/masthead_mobile.png);
 }
-
-/* line 23, ../../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.beta.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-caption, th, td {
-  text-align: left;
-  font-weight: normal;
-  vertical-align: middle;
+/* line 22, ../sass/mobile.scss */
+body#placeholder header h2 {
+  font-size: 1.8em;
+  margin: 0 auto 1em;
+  text-align: center;
 }
-
-/* line 25, ../../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.beta.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-q, blockquote {
-  quotes: "" "";
+/* line 26, ../sass/mobile.scss */
+body#placeholder header h2 em {
+  display: block;
+  clear: all;
+  margin: 5px 0 10px;
 }
-/* line 96, ../../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.beta.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-q:before, q:after, blockquote:before, blockquote:after {
-  content: "";
+/* line 33, ../sass/mobile.scss */
+body#placeholder header h3 {
+  margin: 0 auto;
+  text-align: center;
 }
-
-/* line 27, ../../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.beta.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-a img {
-  border: none;
+/* line 37, ../sass/mobile.scss */
+body#placeholder header h3 #conference {
+  margin-right: 0;
+}
+/* line 41, ../sass/mobile.scss */
+body#placeholder header h3 span {
+  display: block;
+  margin-bottom: 0.5em;
+}
+/* line 51, ../sass/mobile.scss */
+body#placeholder #capture {
+  width: 300px;
+  height: auto;
+  margin: 20px 0;
+  padding: 10px;
+}
+/* line 57, ../sass/mobile.scss */
+body#placeholder #capture #id_email {
+  width: 200px;
 }
